--- a/styles.petitions.css
+++ b/styles.petitions.css
@@ -125,9 +125,17 @@ h2{
     margin-top:35px;
     margin-left:4rem;
 }
-.froddo:hover{
-    color:tomato;
+h3{
+    font-family:sans-serif;
+    font-size:20px;
+    padding-top:1rem;
+    padding-left:10px;
+    color:green;
 }
+h3:hover{
+ color:tomato;
+}
+
 .hen{
    color:green;
    font-size:25px;
